# sister

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  cloudbuild.yaml  conftest.py  data  database.py  deploy-config.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  test_main_cache_and_states.py  utils.py
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-cloudrun.yml
alembic/: env.py
alembic/versions/: 1305de055bf4_add_cost_text_cost_value_to_visura_.py  20260530_drop_workflow_tables.py  20260608_add_situazione_al.py  20260608_add_visura_subtype.py  20260611_add_feedback_config.py  20260616_add_constraints_and_cadastral_tables.py  20260616_align_orm_schema.py  20260616_drop_legacy_columns_tables.py  20260616_fix_prospect_tables_and_location_params_uniqueness.py  20260616_merge_heads_merge_feedback_and_normalize_location_.py  20260616_normalize_location_split_documents.py  20260616_rename_birth_location_to_birth_place.py  31f03df3db46_initial_schema_requests_responses_.py  a2c7f8e31b01_add_page_visits_table.py  b3d8f2a41c01_add_visura_documents_table.py
docs/: implementation_roadmap.md  person_search_workflow.dot  retrieve_p7m_visura.md  schema.dot  sister_cheatsheet.md  sister_quick_user_guide.md
examples/: login_and_intestati.py  login_and_visura.py
scripts/: backfill_db.py  backfill_reports.py  batch_opendata.py  download_missing_p7m.py  populate_query_data.py  query_recrowd_proponents.py  start.sh
sister/: browser.py  cadastral.py  cli.py  client.py  conftest.py  database.py  db_models.py  feedback_admin.py  form_config.py  main.py  models.py  ontology.py  routes.py  services.py  utils.py  visura_xml_models.py  web.py  workflows.py
sister/data/: sister.sqlite
sister/schemas/: VisuraFabbricatiStorica.xsd  VisuraSoggettoAttuale.xsd  VisuraTerreniAttuale.xsd  cadastral-base.xsd
sister/static/css/: auth.css  catasto.css  sister.css
sister/static/css/pages/: browser_control.css  cheatsheet.css  documents_index.css  documents_map.css  dossier_batch_viewer.css  (+10 more)
sister/static/js/: catasto_form_selector.js  catasto_forms.js  catasto_forms_init.js  catasto_nested_select.js  planimetria_cad.js  planimetria_geojson.js  sister_forms.js
sister/templates/: _base.html  _doc_macros.html  _landing.html  _macros.html  _nested.html  _timeline.html  about.html  browser_control.html  cheatsheet.html  documents_index.html  documents_map.html  dossier_batch_viewer.html  dossiers_index.html  files_browser.html  forms.html  glossary.html  guide.html  index.html  landing.html  planimetria.html  privacy_policy.html  result_detail.html  results.html  visura_fabbricati_storica.html  visura_soggetto_attuale.html  visura_soggetto_immobili.html  visura_soggetto_riepilogo.html  visura_terreni_attuale.html  workflow_detail.html  workflows.html
sister/templates/components/: cadastral.html  card.html  kpi_card.html  table.html
sister/templates/parts/: _hero.html  _visura_header.html
sister/templates/sister/: about.html  base.html  forms.html  index.html  landing.html  privacy_policy.html  result_detail.html  results.html  workflow_detail.html  workflows.html
tests/: conftest.py  fixtures.py  test_cli.py  test_client.py  test_database.py  test_fixtures.py  test_main_cache_and_states.py  test_models.py  test_query_types.py  test_web.py  test_workflows.py
