[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sister"
version = "1.2.0"
description = "SISTER — Servizio API e CLI per l'estrazione automatizzata di dati catastali dal portale SISTER dell'Agenzia delle Entrate"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.12"
authors = [
    {name = "SISTER Contributors"}
]
keywords = ["catasto", "visura", "sister", "agenzia-entrate", "api", "fastapi", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Framework :: FastAPI",
]

dependencies = [
    "aecs4u-auth[browser]",
    "aecs4u-email",
    "aecs4u-workflow",
    "fastapi>=0.115.0",
    "itsdangerous>=2.2.0",
    "structlog>=26.0.0",
    "uvicorn>=0.32.0",
    "beautifulsoup4",
    "pydantic>=2.10.0",
    "python-dotenv",
    "rich>=13.0",
    "aiosqlite>=0.19.0",
    "sqlmodel>=0.0.8",
    "alembic>=1.13.0",
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "aecs4u-theme",
    "lxml>=6.1.1",
    "sqlalchemy>=2.0.50",
    "starlette>=1.2.1",
    "python-multipart>=0.0.32",
    "ezdxf>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/aecs4u/sister"
Repository = "https://github.com/aecs4u/sister"
Issues = "https://github.com/aecs4u/sister/issues"
Changelog = "https://github.com/aecs4u/sister/blob/main/CHANGELOG.md"

[project.scripts]
sister = "sister.cli:run"

[tool.uv.sources]
aecs4u-auth = { git = "https://github.com/aecs4u/aecs4u-auth.git", branch = "main" }
aecs4u-email = { git = "https://github.com/aecs4u/aecs4u-email.git", branch = "main" }
aecs4u-theme = { git = "https://github.com/aecs4u/aecs4u-theme.git", branch = "main" }
aecs4u-workflow = { git = "https://github.com/aecs4u/aecs4u-workflow.git", branch = "main" }

[tool.setuptools]
packages = ["sister"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.deptry]
exclude = ["alembic", "examples", "scripts"]

[tool.deptry.package_module_name_map]
beautifulsoup4 = ["bs4"]
python-dotenv  = ["dotenv"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "uvicorn",         # runtime server — invoked via CLI
    "aiosqlite",       # async SQLite driver, implicit via sqlmodel/aecs4u-auth
    "jinja2",          # templating, implicit via fastapi
    "pytest-cov",      # dev tool in optional-dependencies
    "pytest-asyncio",  # dev tool
    "black",           # dev tool
    "ruff",            # dev tool
    "aecs4u-theme",    # static files via importlib / mount
]
DEP001 = [
    "playwright",      # optional, comes via aecs4u-auth[browser] — not a direct dep
]
